--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Name of your web site">
-    <meta name="author" content="portofolio">
+    <meta name="description" content="Hello there! Here you can see all my work, Vlad.">
+    <meta name="author" content="Roman Vlad">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Vlad | Portofolio</title>
 
