--- a/index.html
+++ b/index.html
@@ -339,6 +339,19 @@
                             <div class="list_inner">
                                 <div class="image">
                                     <img src="img/portfolio/1-1.jpg" alt="" />
+                                    <div class="main" data-img-url="img/portfolio/mixo_thing_.png"></div>
+                                    <a class="full_link zoom" href="img/portfolio/mixo_thing_.png"></a>
+                                </div>
+                                <div class="title">
+                                    <h3><a href="#">Signed by MixoFX</a></h3>
+                                    <span><a href="#">Thumbnails</a></span>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="branding">
+                            <div class="list_inner">
+                                <div class="image">
+                                    <img src="img/portfolio/1-1.jpg" alt="" />
                                     <div class="main" data-img-url="img/portfolio/yoru.jpg"></div>
                                     <a class="full_link zoom" href="img/portfolio/yoru.jpg"></a>
                                 </div>
