--- a/index.html
+++ b/index.html
@@ -322,6 +322,19 @@
                                 </div>
                             </div>
                         </li>
+			    <li class="branding">
+                            <div class="list_inner">
+                                <div class="image">
+                                    <img src="img/portfolio/1-1.jpg" alt="" />
+                                    <div class="main" data-img-url="img/portfolio/elon.png"></div>
+                                    <a class="full_link zoom" href="img/portfolio/elon.png"></a>
+                                </div>
+                                <div class="title">
+                                    <h3><a href="#">Big E</a></h3>
+                                    <span><a href="#">Thumbnails</a></span>
+                                </div>
+                            </div>
+                        </li>
                         <li class="branding">
                             <div class="list_inner">
                                 <div class="image">
